changes to runner and tests